<resources>
    <string name="app_name">RPhelper</string>
    <string name="profile">Profil</string>
    <string name="equipments">Equipements</string>
    <string name="spells">Sorts</string>
    <string name="inventory">Inventaire</string>
    <string name="fight">Combat</string>
    <string name="notes">Notes</string>
    <string name="money">Argent</string>
    <string name="skills">Compétences</string>
    <string name="don">Don(s)</string>
    <string name="don_bonus">Don(s) secondaire(s) / Bonus</string>
    <string name="hint_don">Entrez votre don</string>
    <string name="hint_don_bonus">Entrez vos dons secondaires / bonus</string>
    <string name="name">Nom :</string>
    <string name="classe">Classe :</string>
    <string name="race">Race :</string>
    <string name="origin">Origine :</string>
    <string name="religion">Religion :</string>
    <string name="level">Niveau :</string>
    <string name="speed">Vitesse :</string>
    <string name="deadly_wound">Blessure(s) grave(s) :</string>
    <string name="intel">INT</string>
    <string name="strength">FOR</string>
    <string name="faith">FOI</string>
    <string name="dex">DEX</string>
    <string name="vit">VIT</string>
    <string name="mem">MEM</string>
    <string name="end">END</string>
    <string name="vig">VIG</string>
    <string name="weight">POIDS</string>
    <string name="weight_min">Poids</string>
    <string name="weight_max">Poids max</string>
    <string name="pv">VIE</string>
    <string name="pv_min">Vie</string>
    <string name="pv_max">Vie max</string>
    <string name="mana">MANA</string>
    <string name="mana_min">Mana</string>
    <string name="mana_max">Mana max</string>
    <string name="constitution">CONST</string>
    <string name="const_min">Const</string>
    <string name="const_max">Const max</string>
    <string name="damages">Dégats</string>
    <string name="damages_short">Dgts</string>
    <string name="spell_use">Stat(s) nécéssaire(s)</string>
    <string name="affinity">Affinité</string>
    <string name="affinity_short">Aff</string>
    <string name="status">Statut</string>
    <string name="bonus">Bonus</string>
    <string name="bonus_for">Bonus FOR</string>
    <string name="bonus_dex">Bonus DEX</string>
    <string name="bonus_int">Bonus INT</string>
    <string name="bonus_foi">Bonus FOI</string>
    <string name="boost">Boost</string>
    <string name="proc">Proc</string>
    <string name="block">Blocage</string>
    <string name="block_short">Bloc</string>
    <string name="res">Résistance(s)</string>
    <string name="res_short">Rés</string>
    <string name="def">Défense</string>
    <string name="def_short">Déf</string>
    <string name="fai">Faiblesse(s)</string>
    <string name="fai_short">Fai</string>
    <string name="immun">Immunité(s)</string>
    <string name="immun_short">Immu</string>
    <string name="effect">Effet</string>
    <string name="equip">Equipé</string>
    <string name="equiper">Equiper</string>
    <string name="equip_weapon">Equiper une arme</string>
    <string name="equip_catalyst">Equiper un cataliseur</string>
    <string name="equip_shield">Equiper un bouclier</string>
    <string name="equip_armor">Equiper une pièce d\'armure</string>
    <string name="equip_disequip">Equiper/déséquiper</string>
    <string name="warning_equip">L\'équipement actuellement équipé sera retiré et transféré vers l\'inventaire.</string>
    <string name="now_equip">Actuellement équipé :</string>
    <string name="item">Objet</string>
    <string name="desc">Description</string>
    <string name="quantity">Quantité</string>
    <string name="nb">NB</string>
    <string name="filter_by">Trier par :</string>
    <string name="warning_armor_type">Attention vous devez sélectionner le type de votre pièce d\'armure.</string>
    <string name="nothing">Rien</string>
    <string name="inventory_disequip_all">Déséquiper tout </string>
    <string name="history">Historique</string>
    <string name="damage_suffered">Dégâts subis</string>
    <string name="heal_pv_done">Points de vie soignés</string>
    <string name="heal_mana_done">Points de mana récupérés</string>
    <string name="heal_const_done">Points de constitution récupérés</string>
    <string name="alphabetical">Ordre alphabetique</string>
    <string name="first_weapon">Armes en 1er</string>
    <string name="first_shield">Boucliers en 1er</string>
    <string name="first_armor">Armures en 1er</string>
    <string name="first_jewel">Accessoires en 1er</string>
    <string name="first_item">Objets en 1er</string>
    <string name="choose_type_item">Type d\'objet(s)</string>
    <string name="type">Type</string>
    <string name="jewel">Accessoire</string>
    <string name="weapon">Armes</string>
    <string name="left_hand">Main gauche</string>
    <string name="left_hand2">Main\ngauche</string>
    <string name="right_hand">Main droite</string>
    <string name="right_hand2">Main\ndroite</string>
    <string name="catalyst">Cataliseur</string>
    <string name="shield">Bouclier</string>
    <string name="armor">Armure</string>
    <string name="hat">Casque</string>
    <string name="chestplate">Plastron</string>
    <string name="gloves">Gants</string>
    <string name="greaves">Jambières</string>
    <string name="skill_diplo">Diplomatie / Bluff</string>
    <string name="skill_psy">Intuition / Psychologie</string>
    <string name="skill_know">Connaissance / Analyse</string>
    <string name="skill_push">Grimper / Pousser</string>
    <string name="skill_sneak">Acrobatie / Discrétion</string>
    <string name="skill_craft">Artisanat / Sabotage</string>
    <string name="ask_bonus">Veuillez saisir la valeur de votre bonus/malus.</string>
    <string name="spell1">Sort 1</string>
    <string name="spell2">Sort 2</string>
    <string name="spell3">Sort 3</string>
    <string name="spell4">Sort 4</string>
    <string name="spell5">Sort 5</string>
    <string name="spell6">Sort 6</string>
    <string name="cast_spell">Lancer\nle sort</string>
    <string name="total_damage">Dégats totaux</string>
    <string name="known_spells">Sorts connus</string>
    <string name="choose_equip">Choisissez l\'emplacement où équiper votre sort</string>
    <string name="rapidfire">Rapid fire</string>
    <string name="inventory_title">Inventaire (15kg max)</string>
    <string name="ask_jewel">Cet objet modifie t\'il une ou plusieurs de ces stats ? Si oui cochez la/les case(s) correspondantes et entrez la valeur de cette modification.</string>
    <string name="ask_item_equip">L\'objet que vous équipez modifie t\'il une ou plusieurs de ces stats ? Si oui cochez la/les case(s) correspondantes et entrez la valeur de cette modification. </string>
    <string name="ask_item_disequip">L\'objet que vous déséquipez modifiait t\'il une ou plusieurs de ces stats ? Si oui cochez la/les case(s) correspondantes et entrez la valeur de cette modification. </string>
    <string name="roll_dice">Lancer le dé</string>
    <string name="brut_dmg">Physique (brut)</string>
    <string name="elem_res_dmg">Res</string>
    <string name="elem_brut_dmg">Elem (brut)</string>
    <string name="weak_dmg">Faiblesse</string>
    <string name="submit">SUBIR</string>
    <string name="recovery">Récupération</string>
    <string name="recover">Récupérer</string>
    <string name="activ_frost">Activer frost</string>
    <string name="annul_frost">Annuler frost</string>
    <string name="submit_poison">Subir poison</string>
    <string name="activ_msg_frost">Votre constitution max est divisée par 2 elle passe à : </string>
    <string name="annul_msg_frost">Votre constitution max revient à la normale. </string>
    <string name="posture">Posture</string>
    <string name="offensive">Offensive</string>
    <string name="defensive">Défensive</string>
    <string name="reflex">Réflexe</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="confirm_delete">Etes-vous sûr(e) de vouloir supprimmer cet objet ?</string>
    <string name="confirm_delete_don">Etes-vous sûr(e) de vouloir supprimmer ce don ?</string>
    <string name="confirm_delete_spell">Etes-vous sûr(e) de vouloir supprimmer ce sort ?</string>
    <string name="cancel">Annuler</string>
    <string name="save">Enregistrer</string>
    <string name="disequip">Déséquiper</string>
    <string name="disequip_equipment_msg">est maintenant dans votre inventaire.</string>
    <string name="warning">Attention</string>
    <string name="warning_life">Vos points de vie sont tombés en dessous de 20%.</string>
    <string name="warning_const80">Votre constitution est passée en dessous de 80. Vous ne pouvez plus attaquer avec une arme. Vous pouvez encore bloquer une attaque.</string>
    <string name="warning_const30">Votre constitution est passée en dessous de 30. Vous ne pouvez plus lancer de sorts ni esquiver.</string>
    <string name="warning_mana">Votre mana est tombé en dessous de 20%.</string>
    <string name="lost_msg">Vous avez perdu</string>
    <string name="win_msg">Vous avez gagné</string>
    <string name="ok">OK</string>
    <string name="no">NON</string>
    <string name="validate">Valider</string>
    <string name="po"> po</string>
    <string name="inventory_max_weight">/15kg</string>
    <string name="money_title">Argent</string>
    <string name="money_msg_minus">Saisissez le montant à retirer de votre bourse :</string>
    <string name="money_msg_plus">Saisissez le montant à ajouter dans votre bourse :</string>
    <string name="lifeEditTitle">Modifier vos points de vie</string>
    <string name="constEditTitle">Modifier vos points de constitution</string>
    <string name="manaEditTitle">Modifier vos points de mana</string>
    <string name="editIndicTxt">Veuillez entrer la valeur actuelle.</string>
    <string name="bonusTitle">Modifier bonus/malus</string>
    <string name="lifeBonusTxt">Veuillez entrer la valeur du bonus/malus temporaire sur vos points de vie max.</string>
    <string name="constBonusTxt">Veuillez entrer la valeur du bonus/malus temporaire sur vos points de constitution max.</string>
    <string name="manaBonusTxt">Veuillez entrer la valeur du bonus/malus temporaire sur vos points de mana max.</string>
    <string name="weightBonusTxt">Veuillez entrer la valeur du bonus/malus temporaire sur votre poids max.</string>
    <string name="damageBonusTxt">Veuillez entrer la valeur du bonus/malus temporaire sur vos dégats bruts.</string>
    <string name="defBonusTxt">Veuillez entrer la valeur du bonus/malus temporaire sur votre défense brut.</string>
    <string name="resBonusTxt">Veuillez sélectionner votre résistance temporaire.</string>
    <string name="immunBonusTxt">Veuillez sélectionner votre immunité temporaire.</string>
    <string name="weakBonusTxt">Veuillez sélectionner votre faiblesse temporaire.</string>
    <string name="reset">Reset</string>
    <string name="file_character">character.json</string>
    <string name="file_equipment">equipment.json</string>
    <string name="file_fight">fight.json</string>
    <string name="file_spells">spells.json</string>
    <string name="file_inventory">inventory.json</string>
    <string name="file_history">history.json</string>
    <string name="file_empty_character">empty_character.json</string>
    <string name="file_empty_equipment">empty_equipment.json</string>
    <string name="file_empty_fight">empty_fight.json</string>
    <string name="file_empty_spells">empty_spells.json</string>
    <string name="file_empty_inventory">empty_inventory.json</string>
    <string name="file_empty_history">empty_history.json</string>
    <string name="help">Aide</string>
</resources>