<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/choose_type_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:padding="@dimen/txt_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/choose_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/choose_type_item"
        android:textColor="@color/colorTxt"
        android:textSize="@dimen/title_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.rphelper.cecib.rphelper.utils.MultiRowsRadioGroup
        android:id="@+id/choose_type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/app_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_type_title">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/choose_type_button_weapon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapon"
                android:textColor="@color/colorTxt"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/choose_type_button_shield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shield"
                android:textColor="@color/colorTxt"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/choose_type_button_armor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/armor"
                android:textColor="@color/colorTxt"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/choose_type_button_second_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/choose_type_button_jewel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jewel"
                android:textColor="@color/colorTxt"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/choose_type_button_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item"
                android:textColor="@color/colorTxt"
                android:layout_weight="1"/>
        </LinearLayout>

    </com.rphelper.cecib.rphelper.utils.MultiRowsRadioGroup>


    <LinearLayout
        android:id="@+id/choose_type_buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/choose_type_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/choose_type_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:textColor="@color/colorCatTitle"
            android:padding="@dimen/txt_margin"
            android:background="@color/green"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>