<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/equip_weapon_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/txt_margin"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/equip_weapon_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:text="@string/equip_weapon"
        android:textColor="@color/colorTxt"
        android:textSize="@dimen/title_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/equip_weapon_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin"
        android:text="@string/warning_equip"
        android:textAlignment="center"
        android:textColor="@color/colorTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equip_weapon_title" />

    <RadioGroup
        android:id="@+id/equip_weapon_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equip_weapon_txt">
        <RadioButton
            android:id="@+id/equip_weapon_left_hand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTxt"
            android:text="@string/left_hand"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/txt_margin"
            android:text="@string/now_equip"
            android:textColor="@color/colorTxt" />
        <com.rphelper.cecib.rphelper.component.RecapEquipmentComponent
            android:id="@+id/equip_weapon_recap_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/equip_weapon_right_hand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTxt"
            android:text="@string/right_hand"
            android:layout_marginTop="@dimen/app_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/txt_margin"
            android:text="@string/now_equip"
            android:textColor="@color/colorTxt" />
        <com.rphelper.cecib.rphelper.component.RecapEquipmentComponent
            android:id="@+id/equip_weapon_recap_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <TextView
        android:id="@+id/equip_weapon_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:layout_marginVertical="@dimen/app_margin"
        android:background="@color/green"
        android:paddingHorizontal="@dimen/small_margin"
        android:paddingVertical="@dimen/txt_margin"
        android:text="@string/ok"
        android:textColor="@color/colorCatTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/equip_weapon_radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>