<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/app_margin">

        <ImageView
            android:id="@+id/spell_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:padding="@dimen/txt_margin" />

        <TextView
            android:id="@+id/spell_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:text="@string/spell1"
            android:textColor="@color/colorTxt"
            android:textSize="@dimen/title_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/spell_name_layout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/spell_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/spell_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorTxt" />

            <EditText
                android:id="@+id/spell_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginStart="@dimen/txt_margin" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/spell_indic_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/spell_name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/spell_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/damages"
                android:textColor="@color/colorTxt" />

            <EditText
                android:id="@+id/spell_damage_txt"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/txt_margin"
                android:inputType="number" />

            <TextView
                android:id="@+id/spell_mana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/mana_min"
                android:textColor="@color/colorTxt" />

            <EditText
                android:id="@+id/spell_mana_txt"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/txt_margin"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/spell_stat_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/spell_indic_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/spell_uses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spell_use"
                android:textStyle="bold"
                android:textColor="@color/colorTxt" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/spell_radioGroup_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/spell_use_int"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intel" />

                <RadioButton
                    android:id="@+id/spell_use_foi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faith" />
            </RadioGroup>

            <EditText
                android:id="@+id/spell_use_txt"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/txt_margin"
                android:inputType="number" />

            <RadioGroup
                android:id="@+id/spell_radioGroup_use2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/spell_use2_int"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intel" />

                <RadioButton
                    android:id="@+id/spell_use2_foi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faith" />
            </RadioGroup>

            <EditText
                android:id="@+id/spell_use2_txt"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/txt_margin"
                android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/spell_effect_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/spell_stat_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/spell_effect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/effect"
                android:textColor="@color/colorTxt"/>
            <EditText
                android:id="@+id/spell_effect_txt"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginStart="@dimen/txt_margin"
                android:scrollbars="vertical"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weapon_buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/spell_effect_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/spell_disequip_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disequip"
                android:textColor="@color/colorCatTitle"
                android:padding="@dimen/txt_margin"
                android:background="@color/medium_grey"
                android:layout_marginEnd="@dimen/app_margin"/>

            <TextView
                android:id="@+id/spell_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/colorCatTitle"
                android:padding="@dimen/txt_margin"
                android:background="@color/green"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>